--- a/BPVAPP-Backend/BPVAPP_Backend.csproj
+++ b/BPVAPP-Backend/BPVAPP_Backend.csproj
@@ -28,4 +28,8 @@
     </Content>
   </ItemGroup>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command=":: xcopy -y &quot;&quot; &quot;&quot;" />
+  </Target>
+
 </Project>
